# MillenniumDB

./: .clang-format  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Contributors.md  Dockerfile  Makefile  README.md  test.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: update_browser_interface.yml
browser/: index.html
browser/assets/: index-CCXrhw51.css  index-LH6ATiEr.css  millenniumdb.worker-BLmp8YRP.js  millenniumdb.worker-MjK9WE7R.js
data/: example-db.qm  example-rdf-database.ttl  example-sparql-query.rq  ms-test-1.mql  ms-test-1.qm
data/examples/dbs/: d_edges.table  db.config  edge_key_value.leaf  edge_label.leaf  from_to_edge.leaf  key_value_edge.leaf  key_value_node.leaf  label_edge.leaf  label_node.leaf  node_key_value.leaf  node_label.leaf  str_hash.dir  tensor_hash.dir  to_from_edge.leaf  u_edge.leaf  u_edges.table
deb-package/: Dockerfile-create  Dockerfile-test  package  readme.md  run-tests
deb-package/DEBIAN/: control  postinst
doc/: data_model.md  import.md  query_language.md  text-search-index.md
doc/quad_model/: data_model.md  import.md  query_language.md
doc/sparql/: sparql_deviations.md
scripts/: cancel_query  diff-tests  query  run-server  run-tests  sparql-update  sparql_query.py  update
scripts/mql/: diff  server  tests
scripts/sparql/: diff  integration-tests  server  tests  unit-tests
src/base/: exceptions.h  path_printer.cc  path_printer.h  string_manager.h
src/base/binding/: binding.h  binding_id.h  binding_id_iter.h  binding_iter.h
src/base/graph/: anonymous_node.h  edge.h  graph_model.h  graph_object.h  identifiable_external.h  identifiable_inlined.h  path.h  path_printer.h  string_external.h  string_inlined.h
src/base/graph_object/: anonymous_node.h  datetime.h  decimal_external.h  decimal_inlined.h  decimal_tmp.h  edge.h  graph_object.cc  graph_object.h  iri_external.h  iri_inlined.h  iri_tmp.h  literal_datatype_external.h  literal_datatype_inlined.h  literal_datatype_tmp.h  literal_language_external.h  literal_language_inlined.h  literal_language_tmp.h  named_node_external.h  named_node_inlined.h  named_node_tmp.h  not_found_object.h  null_graph_object.h  path.h  string_external.h  string_inlined.h  string_tmp.h
src/base/ids/: id.h  node_id.h  object_id.h  var_id.h
src/base/parser/: query_parser.cc  query_parser.h
src/base/query/: named_node.h  query_element.h  query_element_to_graph_object.h  query_element_to_string.h  var.h
src/base/thread/: thread_info.h  thread_key.h
src/cli/: cli.cc  cli.h
src/execution/: graph_model.h
src/execution/binding_id_iter/: distinct_id_hash.cc  distinct_id_hash.h  edge_table_lookup.cc  edge_table_lookup.h  empty_binding_id_iter.cc  empty_binding_id_iter.h  index_left_outer_join.cc  index_left_outer_join.h  index_nested_loop_join.cc  index_nested_loop_join.h  index_scan.cc  index_scan.h  leapfrog_join.cc  leapfrog_join.h  object_enum.cc  object_enum.h  optional_node.h  single_result_binding_id_iter.h  union.cc  union.h
src/execution/binding_iter/: aggregation.cc  aggregation.h  describe.cc  describe.h  distinct_hash.cc  distinct_hash.h  distinct_ordered.cc  distinct_ordered.h  group_by.h  match.cc  match.h  order_by.cc  order_by.h  return.cc  return.h  where.cc  where.h
src/execution/graph_object/: char_iter.cc  char_iter.h  graph_object_factory.cc  graph_object_factory.h  graph_object_manager.h  graph_object_types.h
src/graph_models/: exceptions.h  inliner.h  model_destroyer.h  object_id.h
src/graph_models/common/: conversions.h
src/graph_models/gql/: comparisons.cc  comparisons.h  conversions.cc  conversions.h  gql_catalog.cc  gql_catalog.h  gql_model.cc  gql_model.h  gql_object_id.h
src/graph_models/quad_model/: comparisons.cc  comparisons.h  conversions.h  quad_catalog.cc  quad_catalog.h  quad_model.cc  quad_model.h  quad_object_id.cc  quad_object_id.h
src/graph_models/rdf_model/: comparisons.cc  comparisons.h  conversions.cc  conversions.h  iri_compression.cc  (+9 more)
src/import/: default_config.h  disk_vector.h  exceptions.h  external_bytes.cc  external_bytes.h  external_helper.cc  external_helper.h  external_string.cc  external_string.h  import_helper.h  inliner.h  stats_processor.h
src/macros/: aligned_alloc.h  count_zeros.h  likely.h
src/main/: create_db.cc  query.cc  server.cc
src/misc/: aligned_allocator.h  arena.h  bytes_encoder.h  fatal_error.h  fixed_size_tuple_priority_queue.h  is_name_valid_for_path.h  istream.h  locale.h  logger.cc  logger.h  min_max_heap.h  set_operations.h  tensor_oid_op.h  total_ram.h  transliterator.cc  transliterator.h  trim.h  unicode_escape.h
src/network/: communication_protocol.h  exceptions.h  tcp_buffer.h
src/query/: exceptions.h  id.h  query_context.cc  query_context.h  variable_set.cc  variable_set.h
src/server/: server.h  tcp_buffer.cc  tcp_buffer.h
src/storage/: buffer_manager.cc  buffer_manager.h  char_iter.cc  char_iter.h  disk_int_stack.cc  disk_int_stack.h  file_id.h  file_manager.cc  file_manager.h  filesystem.h  page.cc  page.h  page_id.h  scsu.cc  scsu.h  string_manager.cc  string_manager.h  tmp_manager.cc  tmp_manager.h  unified_storage.h
src/system/: buffer_manager.cc  buffer_manager.h  file_manager.cc  file_manager.h  path_manager.cc  path_manager.h  string_manager.cc  string_manager.h  system.cc  system.h  tensor_manager.cc  tensor_manager.h  tmp_manager.cc  tmp_manager.h
src/tests/: check_bpts.cc  check_extendible_hash.cc  compare_datetime.cc  compare_decimal_both_ext.cc  compare_decimal_both_inl.cc  compare_decimal_inl_ext.cc  create_bpt.cc  decimal_operations.cc  execute_query.cc  iri_prefixes-test.cc  new_decimal_operations.cc  normalize_decimal.cc  regular_path_expr_to_rpq_dfa.cc  scsu-test.cc  strings_hash_bulk_import.cc  tensor_operations.cc  tensor_store.cc  test_rdf.cc  test_smt.cc  text_index_normalize_tokenize.cc  trie.cc  variable_set.cc
tests/: README.md  requirements.txt
tests/dbs/: test_db.txt
tests/mql/: test-status.txt
tests/sparql/: test-status.txt
tests/trie/: error_search_queries.txt  search_queries.txt
whitepaper/: redme.md
(+3669 files in other folders)
